--- a/merry_mod_1_project.ipynb
+++ b/merry_mod_1_project.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
@@ -292,7 +292,7 @@
        "sqft_lot15           5650        7639        8062        5000        7503"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -338,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -380,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -390,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 6,
    "metadata": {
     "scrolled": false
    },
@@ -445,7 +445,7 @@
        "       '20.0', '274.0', '248.0'], dtype=object)"
       ]
      },
-     "execution_count": 102,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -456,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -466,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 8,
    "metadata": {
     "scrolled": false
    },
@@ -498,7 +498,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 104,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -517,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -567,7 +567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -583,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -593,7 +593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -603,7 +603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -618,7 +618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -631,7 +631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -641,7 +641,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -653,7 +653,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -667,7 +667,7 @@
        "Name: season, dtype: int64"
       ]
      },
-     "execution_count": 113,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -690,7 +690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 18,
    "metadata": {
     "scrolled": true
    },
@@ -702,7 +702,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 19,
    "metadata": {
     "scrolled": false
    },
@@ -956,7 +956,7 @@
        "waterfront     0.000000e+00  "
       ]
      },
-     "execution_count": 115,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -982,7 +982,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1000,7 +1000,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 21,
    "metadata": {
     "scrolled": true
    },
@@ -1011,7 +1011,7 @@
        "<module 'matplotlib.tight_layout' from '/Users/tjjj/anaconda3/lib/python3.7/site-packages/matplotlib/tight_layout.py'>"
       ]
      },
-     "execution_count": 117,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1042,7 +1042,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1052,7 +1052,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1062,7 +1062,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 24,
    "metadata": {
     "scrolled": true
    },
@@ -1205,7 +1205,7 @@
        "98039    1895000.0"
       ]
      },
-     "execution_count": 120,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1226,7 +1226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1250,7 +1250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1320,7 +1320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1331,7 +1331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1738,7 +1738,7 @@
        "center_dist                              6.94766              2.06217  "
       ]
      },
-     "execution_count": 124,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1762,7 +1762,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1778,7 +1778,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 30,
    "metadata": {
     "scrolled": true
    },
@@ -1869,7 +1869,7 @@
        "4   0.291589 -0.305436         -0.0825      -0.629986"
       ]
      },
-     "execution_count": 126,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1890,7 +1890,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1899,7 +1899,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1959,7 +1959,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1969,7 +1969,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 34,
    "metadata": {
     "scrolled": true
    },
@@ -1982,7 +1982,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -1991,7 +1991,7 @@
        "<module 'matplotlib.tight_layout' from '/Users/tjjj/anaconda3/lib/python3.7/site-packages/matplotlib/tight_layout.py'>"
       ]
      },
-     "execution_count": 131,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2016,7 +2016,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2029,7 +2029,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -2321,7 +2321,7 @@
        "price_log           12.682307  "
       ]
      },
-     "execution_count": 133,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2333,7 +2333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -2342,7 +2342,7 @@
        "<module 'matplotlib.tight_layout' from '/Users/tjjj/anaconda3/lib/python3.7/site-packages/matplotlib/tight_layout.py'>"
       ]
      },
-     "execution_count": 134,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2381,7 +2381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2392,7 +2392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2403,7 +2403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -2429,7 +2429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 42,
    "metadata": {
     "scrolled": true
    },
@@ -2494,7 +2494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2511,7 +2511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2524,7 +2524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2542,16 +2542,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
-   "metadata": {},
+   "execution_count": 46,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.7727805817441149"
+       "0.7727960711942768"
       ]
      },
-     "execution_count": 142,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2563,7 +2565,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0.00010771,  0.00010179, -0.0169556 , -0.02713158,  0.00059031,\n",
+       "         0.0376671 ]])"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "linreg.coef_"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Our final model formula is: \n",
+    "\n",
+    "Predicted log price = 0.00010771 * (sqft_above) + 0.00010179 * (sqft_living15) - 0.0169556 * (comm_dist) - 0.02713158 * (center_dist) + 0.00059031 * (sqft_per_room) + 0.0376671 * (appeal_std)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Some interesesting findings: \n",
+    "* The area of one home and the area of the neighbors' homes influence the price about the same. However, the \"area per room\" is more influential than either of those features. \n",
+    "* The distance from any \"center\" is doubly influential compared to the distance from the commerce centers when predicting log price, and seven times more influential when predicting price.  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2585,7 +2626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -2603,7 +2644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2614,16 +2655,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.15111660385155273"
+       "0.14986990238093106"
       ]
      },
-     "execution_count": 146,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
